# jira-voice-assistant

./: README.md  audio_capture.ipynb  audio_transcription.ipynb  intent_extractor.ipynb  jira_api_client.ipynb  main.py  pyproject.toml  requirements.txt
diagrams/: sequence-diagram.puml
playgrounds/langchain/: langchain_playground.ipynb
playgrounds/sound_device/: sound_device_playgound.ipynb
